<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ChooseNameActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/choose_their"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra_bold_italic"
        android:text="@string/name"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextNPCName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNPCName">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/heritage"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/occupation"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/gender"
            android:textColor="#99000000"
            android:textColorLink="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/alignment"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/motivation"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/virtue"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/vice"
            android:textColor="#99000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNPCName">

        <TextView
            android:id="@+id/resultHeritageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/heritage"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultOccupationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/occupation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultGenderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/gender"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultAlignmentTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/alignment"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultMotivationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/motivation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultVirtueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/virtue"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultViceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/vice"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveNameBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/next_btn"
        android:fontFamily="@font/montserrat"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNPCName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNPCName"
        app:layout_constraintTop_toTopOf="@+id/editTextNPCName" />

</androidx.constraintlayout.widget.ConstraintLayout>