<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HeritageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/choose_their"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra_bold_italic"
        android:text="@string/prevailing_heritage"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ToggleButton
        android:id="@+id/heritageBtnHuman"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/toggle_btn"
        android:fontFamily="@font/montserrat"
        android:text="@string/human"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/human"
        android:textOn="@string/human"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/heritageBtnHalfling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.37"
        app:layout_constraintVertical_chainStyle="packed" />

    <ToggleButton
        android:id="@+id/heritageBtnHalfling"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/toggle_btn"
        android:fontFamily="@font/montserrat"
        android:text="@string/halfling"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/halfling"
        android:textOn="@string/halfling"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/heritageBtnDwarf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heritageBtnHuman" />

    <ToggleButton
        android:id="@+id/heritageBtnDwarf"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/toggle_btn"
        android:fontFamily="@font/montserrat"
        android:text="@string/dwarf"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/dwarf"
        android:textOn="@string/dwarf"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/heritageBtnElf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heritageBtnHalfling" />

    <ToggleButton
        android:id="@+id/heritageBtnElf"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/toggle_btn"
        android:fontFamily="@font/montserrat"
        android:text="@string/elf"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textOff="@string/elf"
        android:textOn="@string/elf"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heritageBtnDwarf" />

</androidx.constraintlayout.widget.ConstraintLayout>